# lbmpc_semimarkov

./: .gitignore  README.md  notes_refactoring.md  pyproject.toml  requirements.txt  requirements_extra.txt  run.py
barl/: run.py
barl/acq/: acqoptimize.py  acquisition.py
barl/envs/: __init__.py  kuramoto_sivashinsky.py  lorenz_new.py  pendulum.py  pendulum_semimarkov.py  pendulum_semimarkov_new.py  pendulum_trigo.py  reacher.py  weird_gain.py  wrappers.py
barl/models/: simple_gp.py
barl/util/: __init__.py  control_util.py  timing.py
barl/visualisation/: plot_ground_truth.py  plot_observations.py
barl/viz/: __init__.py  plot.py  plot_gp_mpc_groundtruth.py  plot_gp_mpc_trajectories.py  plot_ground_truth.py  plot_observations.py
bash_scripts/archives/: lorenz_expts.sh  optimised.sh  quick_test.sh  short_lava_expts.sh  small_sampling.sh
cfg/: config.yaml
cfg/alg/: opt_barl.yaml
cfg/env/: ks.yaml  lorenz.yaml  lorenz_noisy_gp.yaml  lorenz_static_gp.yaml  pendulum-semimarkov.yaml  pendulum.yaml
config/: config.yaml
custom_envs/: identity.py  linear.py  pde_class.py
custom_envs/kuramoto_sivashinsky/: kuramoto_sivashinsky.py
custom_envs/lorenz/: lorenz.py
custom_envs/utils/: lqr.py  renderer.py  utils.py
custom_envs/wrappers/: gym_wrappers.py
docker/: Dockerfile
evaluation/: metrics.py
examples/mpc/: batch_pendbax.py  cartpole_bax.py  goddard_bax.py  goddard_gpfit.py  goddard_mbrl.py  goddard_sanitycheck.py  pendulum_bax.py  pendulum_gpfit.py  pendulum_mbrl.py  pendulum_postmean.py  pendulum_rbax.py  pendulum_rmbrl.py  pendulum_sanitycheck.py
lbmpc_semimarkov/: __init__.py  __main__.py
lbmpc_semimarkov/acq/: __init__.py
lbmpc_semimarkov/alg/: __init__.py  algorithms.py  mpc.py
lbmpc_semimarkov/envs/: __init__.py  barl_interface_env.py  lorenz_new.py  pde_class.py  pendulum_trigo.py  wrappers.py
lbmpc_semimarkov/models/: __init__.py  gpflow_gp.py  gpfs_gp.py  stan_gp.py
lbmpc_semimarkov/policies/: __init__.py
lbmpc_semimarkov/util/: base.py  control_util.py  misc_util.py
lbmpc_semimarkov/visualisation/: __init__.py  make_plots.py  plot_gp_mpc_groundtruth.py  plot_gp_mpc_trajectories.py  plot_ground_truth.py  plot_observations.py
notebooks/2023_11_28_process_training_results_pendulum_semimarkov_new/: 2023_11_28_process_training_results_pendulum_semimarkov_new.ipynb
policy/: callbacks.py  off_policy.py  on_policy.py  replay_DDPG.py  replay_SAC.py  replay_policy.py
shell/: baselines.sh  ks_expts.sh  small_sampling.sh
(+72 files in other folders)
