[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lbmpc_semimarkov"
version = "0.0.1"
authors = [
    { name = "Hosseinkhan Boucher Rémy", email = "remy.hosseinkhan@universite-paris-saclay.fr" },
]
description = "A Bayesian Adaptive Reinforcement Learning extension to Semi-Markov Decision Process"
readme = "README.md"
keywords = ["Bayesian Optimisation", "Model Predictive Control", "Semi-Markov Decision Process"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha"
]

dependencies = [
    "cma",
    "colorednoise",
    "gpflow",
    "gpflow_sampling @ git+https://github.com/j-wilson/GPflowSampling.git@develop",
    "gymnasium",
    "jax",
    "jaxlib",
    "matplotlib",
    "mlflow==1.27.0",
    "omegaconf",
    "pystan",
    "pyyaml",
    "scikit-learn",
    "scipy",
    "tf_keras",
    "tqdm",
]

[project.optional-dependencies]
notebooks = [
    "seaborn",
    "tbparse"]

[tool.setuptools.packages.find]
where = ["."]
include = ["lbmpc_semimarkov"]
namespaces = true
